# onemllndllrs

./: '  Cargo.toml
assets/: .xdp-b.glb-K7evr1  .xdp-blocks_2.glb-8TvkxO  Gun.glb  blocks.glb  blocks.gltf  gun.glb  phone.glb  stool.glb
assets/buildings/: teahouse.glb
assets/shaders/: vertex.wgsl
src/: audio.rs  camera.rs  clock.rs  collision.rs  dialogue.rs  hud.rs  input.rs  interactions.rs  inventory.rs  item.rs  main.rs  menus.rs  money.rs  movement.rs  object.rs  phone.rs  player.rs  quest.rs  settings.rs  shooting.rs  weapon.rs
