[package]
name = "onemllndllrs"
version = "0.1.0"
edition = "2021"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.10.0"
bevy-vfx-bag = "0.2.0"
bevy_quickmenu = {version = "0.1.6", git = "https://github.com/terhechte/bevy_quickmenu"}
bevy_rapier3d = "0.21.0"
leafwing-input-manager = "0.9.1"
