[package]
name = "onemllndllrs"
version = "0.1.0"
edition = "2021"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11.0"
bevy-inspector-egui = "0.19.0"
bevy_rapier3d = "0.22.0"
leafwing-input-manager = "0.10.0"
regex = "1.9.1"
