[package]
name = "onemllndllrs"
version = "0.1.0"
edition = "2021"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11.0"
bevy-inspector-egui = "0.19.0"
bevy_rapier3d = "0.22.0"
leafwing-input-manager = "0.10.0"
regex = "1.9.1"
bevy_gltf_components = { git="https://github.com/kaosat-dev/Blender_bevy_components_worklflow.git" }
rand = "0.8.5"
bevy_asset_loader = {version="0.17.0", features=["3d"]}
bevy_vector_shapes = "0.5.1"
